Programmazione 1- Not checked/Laboratorio/compiling_error.txt
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp: In constructor ‘B::B(int)’:
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:37:17: error: expected primary-expression before ‘int’
   B(int _n) : A(int _n)
                 ^~~
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp: In member function ‘const int B::fatt(int)’:
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:44:17: error: ‘x’ was not declared in this scope
     return fact(x);
                 ^
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:44:12: error: ‘fact’ was not declared in this scope
     return fact(x);
            ^~~~
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:44:12: note: suggested alternative: ‘fatt’
     return fact(x);
            ^~~~
            fatt
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp: In member function ‘const int B::f(int)’:
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:49:11: error: expected primary-expression before ‘return’
     n<z ? return fact(n) : return fact(m);
           ^~~~~~
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:49:11: error: expected ‘:’ before ‘return’
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:49:11: error: expected primary-expression before ‘return’
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp: In constructor ‘C<T>::C(int)’:
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:65:17: error: expected primary-expression before ‘int’
   C(int _n) : A(int _n)
                 ^~~
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp: In member function ‘const T C<T>::g(T)’:
/home/default/Documenti/University/Programmazione 1/Laboratorio/19Luglio.cpp:72:17: error: expected primary-expression before ‘,’ token
     return pow(T, 2);
                 ^
